package org.example;

public enum DiseaseType {
    VIRUS,
    BACTERIA
}
